--- a/SAFV/src/main/resources/application.properties
+++ b/SAFV/src/main/resources/application.properties
@@ -1,16 +1,22 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/DB.safv
-spring.datasource.username=postgres
-spring.datasource.password=admin
-
-
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
+spring.datasource.url=${HEROKU_POSTGRESQL_COBALT_URL}
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl = true
 
 
 
-server.port = 8090
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+##spring.jpa.hibernate.ddl=none
+##spring.jpa.hibernate.show-sql=true
+##spring.datasource.initialization-mode=always
+##spring.datasource.initialize=true
+##spring.datasource.schema=classpath:/schema.sql
+##spring.datasource.continue-on-error=true
+#
+#spring.datasource.url=${JDBC_DATASOURCE_URL}
+##spring.datasource.username=postgres
+##spring.datasource.password=admin
+#spring.jpa.show-sql=true
+#spring.jpa.generate-dll=true
+#
+#
+#server.port = 8080
